# teletran1

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT_WORKFLOW_GUIDE.md  BLUEPRINT.md  CLAUDE.md  ContextSpec.md  DATABASE_IMPLEMENTATION_SUMMARY.md  DATABASE_README.md  DECISIONS.md  FULL_ARCHITECTURE.md  LANGGRAPH_IMPLEMENTATION_SUMMARY.md  LLM_IMPLEMENTATION_SUMMARY.md  MANUS_NOTION_TEST_PROMPT.md  Makefile  NOTION_ADAPTER_SUMMARY.md  NOTION_SETUP_GUIDE.md  QUICK_START_DATABASE.md  QUICK_START_RENDER.md  README.md  RENDER_DEPLOYMENT_GUIDE.md  TEST_REPORT_2024-11-20.md  alembic.ini  mypy.ini  pyproject.toml  render.yaml  requirements.txt  ruff.toml  test_e2e_n8n.py  test_e2e_simple.py  test_real_notion.py
alembic/: env.py
alembic/versions/: 001_create_initial_schema.py
apps/: __init__.py
apps/core_api/: __init__.py  auth.py  deps.py  main.py  middleware.py  telemetry.py
apps/core_api/routers/: __init__.py  act.py  auth.py  health.py  metrics.py  runs.py
apps/queue_worker/: main.py
chad_agents/: __init__.py
chad_agents/graphs/: __init__.py  graph_langgraph.py
chad_agents/policies/: __init__.py  autonomy.py  policy_guard.py  scopes.py
chad_agents/reflex/: __init__.py  router.py
chad_config/: __init__.py  settings.py
chad_llm/: __init__.py  anthropic_client.py  client.py  openai_client.py  router.py
chad_memory/: __init__.py  database.py  models.py  stores.py
chad_obs/: __init__.py  logging.py  metrics.py  tracing.py
chad_storage/: __init__.py
chad_tools/: __init__.py  base.py  registry.py
chad_tools/adapters/: __init__.py  notion_design.md  server.py
chad_tools/adapters/github/: __init__.py  client.py  exceptions.py  schemas.py
chad_tools/adapters/github/tools/: __init__.py  add_comment.py  create_issue.py  get_pr.py  list_repos.py  search_issues.py
chad_tools/adapters/google/: __init__.py  client.py  exceptions.py  schemas.py
chad_tools/adapters/google/tools/: __init__.py  create_event.py  get_events.py  read_doc.py  search_drive.py  send_email.py
chad_tools/adapters/n8n/: __init__.py  client.py  registry.py  schemas.py  tool.py
chad_tools/adapters/notion/: __init__.py  client.py  exceptions.py  schemas.py
chad_tools/adapters/notion/tools/: __init__.py  create_page.py  query_database.py  read_page.py  search.py
chad_tools/adapters/slack/: __init__.py  client.py  exceptions.py  schemas.py
chad_tools/adapters/slack/tools/: __init__.py  add_reaction.py  get_channel.py  list_channels.py  send_message.py  upload_file.py
infra/deployment/systemd/: chad-core-api.service
infra/docker/: Dockerfile.api  docker-compose.yml
tests/: __init__.py  conftest.py  test_agent_loop.py  test_api.py  test_auth.py  test_config.py  test_memory.py  test_policy.py  test_registry.py
tests/adapters/: test_github.py  test_google.py  test_notion.py  test_slack.py
tests/integration/: test_n8n_adapter.py
tests/llm/: test_llm_clients.py
